<resources>
    <string name="app_name">Alfresco</string>
    <string name="app_name_beta">Beta</string>
    <string name="empty_accounts">No account available</string>
    <string name="home_title">Let\'s get you started&#8230; </string>
    <string name="home_sign_cloud">Sign up for Alfresco Cloud</string>
    <string name="home_sign_cloud_description">New to Alfresco ? Create a free online account to store your documents and access them from anywhere.</string>
    <string name="home_account">I already have an account</string>
    <string name="home_account_description">Choose this option if you already have an Alfresco Cloud account or you want to connect to an Alfresco Server</string>
    <string name="home_helper">If you want to learn more about Alfresco Mobile take a look at <a href="alfresco://view_help_guide/">our guide</a> in the Help area</string>
    <string name="account_wizard_alfresco_server">Alfresco Server</string>
    <string name="account_wizard_alfresco_server_description">Connect to an Alfresco Server</string>
    <string name="account_wizard_alfresco_cloud">Alfresco Cloud</string>
    <string name="account_wizard_alfresco_cloud_description">Access your Alfresco Cloud account</string>
    <string name="account_wizard_alfresco_help">New to Alfresco ? <a href="alfresco://sign_up_cloud/">Sign Up</a> for a free account</string>
    <string name="account_wizard_alfresco_help_inside_app">New to Alfresco ? <a href="alfresco://sign_up_cloud_i/">Sign Up</a> for a free account</string>
    <string name="account">Account</string>
    <string name="action_add_account">Add an account</string>
    <string name="account_username">Username</string>
    <string name="account_username_required_hint">Username (Required)</string>
    <string name="account_password">Password</string>
    <string name="account_password_required_hint">Password (Required)</string>
    <string name="account_hostname">Hostname</string>
    <string name="account_hostname_required_hint">Hostname like www.example.com (Required)</string>
    <string name="account_hostname_hint">www.example.com (Required)</string>
    <string name="account_description">Description</string>
    <string name="account_description_optional_hint">Description (Optional). By default it\'s Alfresco Server</string>
    <string name="account_description_hint">Alfresco Server (Optional)</string>
    <string name="account_advanced">Advanced</string>
    <string name="account_authentication">Account Authentication</string>
    <string name="account_https">HTTPS</string>
    <string name="account_https_on_hint">HTTPS on</string>
    <string name="account_https_off_hint">HTTPS off</string>
    <string name="account_port">Port</string>
    <string name="account_port_hint">Port (Optional)</string>
    <string name="account_servicedocument">Service URL</string>
    <string name="account_servicedocument_hint">Service URL (Optional). </string>
    <string name="account_wizard_step2_title">Account Authentication Information</string>
    <string name="account_verify">Verifying Account Information&#8230;</string>
    <string name="email_hint">example@acme.com</string>
    <string name="account_validate">Save</string>
    <string name="account_validate_hint">Save your account information</string>
    <string name="account_validate_disable_hint">Please fill Username, Password and Hostname fields.</string>
    <string name="account_validate_disable_url_hint">Your hostname and service document value seems to be wrong. Please check your account settings.</string>
    <string name="account_wizard_alldone_description">Your account is ready for you to use.</string>
    <string name="account_wizard_step1">Step 1 of 2</string>
    <string name="account_wizard_step1_description">Select Account</string>
    <string name="account_wizard_step2">Step 2 of 2</string>
    <string name="account_wizard_step2_description">Account Information</string>
    <string name="account_not_activated">Your account is not activated. Please check the Manage Account screen.</string>
    <string name="account_not_activated_description">Your account is still waiting for verification</string>
    <string name="account_default_cloud">Alfresco Cloud</string>
    <string name="account_default_onpremise">Alfresco Server</string>
    <string name="account_edit_hint">Edit "%s" account informations</string>
    <string name="account_delete_hint">Delete "%s" account</string>
    <string name="wait_title">Please wait</string>
    <string name="wait_message">Contacting your server&#8230;</string>
    <string name="retry_account_loading">Retry</string>
    <string name="error_session_creation_title">Save Account</string>
    <string name="error_session_creation_message">Connection Error</string>
    <string name="error_session_creation">Unable to authenticate. Check your account settings.</string>
    <string name="error_session_hostname"><![CDATA[Your <b>hostname</b> value seems to be wrong<br/> or you may need to <b>activate your VPN</b>.<br/> Please check your account settings.]]></string>
    <string name="error_session_nodata"><![CDATA[<p><b>Your device has no data connection.</b><br/></p> Please check your device settings and enable a data connection.]]></string>
    <string name="error_session_unauthorized"><![CDATA[You are not allowed to access this server.<br/> Please check your account settings <b>(Username/Password)</b>.]]></string>
    <string name="error_session_service_url"><![CDATA[Your <b>service url</b> value is incorrect.<br/> Please check your account settings.]]></string>
    <string name="error_session_service_unavailable"><![CDATA[The server is temporarily unable to service your request due to maintenance downtime or capacity problems.<br/> Please try again later.]]></string>
    <string name="error_session_notfound"><![CDATA[Your server couldn\'t be reached.<br/> Please check your account settings.]]></string>
    <string name="error_session_port"><![CDATA[Your <b>port</b> value is incorrect.<br/> Please check your account settings.]]></string>
    <string name="error_session_certificate">
<![CDATA[<p><b>The server\'s security certificate is not trusted!</b><br/></p>
		The third-party organization that issued your server destination\'s certificate is not one that your device recognizes.<br/>
		In order for Alfresco Mobile to verify that you\'re connecting with the appropriate server, its certificate must be from a trusted organization.<br/>
		If your server has a self signed certificate please add it to your device to successfully connect.<br/> ]]>
    </string>
    <string name="error_session_certificate_expired">
<![CDATA[<p><b>The server\'s security certificate has expired or is not yet valid!</b><br/></p>
		Please check the date and time your device is set to.<br/> If the problem persists please contact your administrator. ]]>
    </string>
    <string name="error_session_ssl">
<![CDATA[<p><b>An error occurred with the SSL protocol.</b><br/></p>
        Please check your account settings and try again.<br/> If the problem persists please contact your administrator.]]>
    </string>
    <string name="error_session_cloud_unavailable">
<![CDATA[<p><b>Alfresco in the Cloud is under heavy load right now!</b><br/></p>
        Please try again in a few minutes.<br/>]]>
    </string>
    <string name="error_session_expired">Your session has expired. Please sign in again.</string>
    <string name="error_session_refresh">Refreshing session.</string>
    <string name="error_chunk_transfert"><![CDATA[The server doesnt support chunk transfert.<br/> Please reload your account</b>.]]></string>
    <string name="error_general_title">An error has occurred.</string>
    <string name="error_general">An error has occurred. Please try again.</string>
    <string name="error_account_url">The URL is incorrect. Please check your account settings.</string>
    <string name="error_unknown_filepath">Failed to find the resource.</string>
    <string name="geolocation">Geolocation</string>
    <string name="action_version">Versions</string>
    <string name="document_comments_header">Comments</string>
    <string name="document_tags_header">Tags</string>
    <string name="document_version_header">Version</string>
    <string name="empty_download">No Document</string>
    <string name="search_form_hint">Enter your search term</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="action_rename">Rename</string>
    <string name="action_rename_desc">New name for %s</string>
    <string name="menu_browse_root">Repository</string>
    <string name="menu_browse_sites">Sites</string>
    <string name="menu_browse_userhome">My Files</string>
    <string name="menu_browse_shared">Shared Files</string>
    <string name="menu_browse_all_sites">All Sites</string>
    <string name="menu_browse_my_sites">My Sites</string>
    <string name="menu_browse_favorite_sites">Favorite Sites</string>
    <string name="menu_browse_tags">Tags</string>
    <string name="menu_browse_activities">Activities</string>
    <string name="menu_search">Search</string>
    <string name="menu_downloads">Downloads</string>
    <string name="passcode_title">Enter Passcode</string>
    <string name="passcode_enable_title">Enable Passcode</string>
    <string name="passcode_preference">Passcode Protection</string>
    <string name="passcode_change">Change Passcode</string>
    <string name="passcode_timeout">Expiration</string>
    <string name="passcode_erase_data">Erase Data</string>
    <string name="passcode_erase_data_summary">Erase all Alfresco Mobile data from this device after 10 failed passcode attempts</string>
    <string name="passcode_timeout_title">Passcode timeout</string>
    <string name="settings">Settings</string>
    <string name="settings_enterprise">Enterprise Settings</string>
    <string name="settings_privatefolder_summary">Data protection allows all downloaded content to be readable only in the Alfresco app. (Enterprise customers only)</string>
    <string name="settings_privatefolder_title">Data Protection</string>
    <string name="settings_links">Links</string>
    <string name="settings_links_website">Alfresco</string>
    <string name="settings_links_website_summary">Visit official Alfresco website</string>
    <string name="settings_links_website_url">http://www.alfresco.com/products/mobile</string>
    <string name="settings_rating">Write a review</string>
    <string name="settings_rating_summary">Rate Alfresco Mobile on Google Play</string>
    <string name="settings_rating_url">market://details?id=org.alfresco.mobile.android.application</string>
    <string name="settings_links_facebook">Like Alfresco on Facebook</string>
    <string name="settings_links_facebook_summary">Like on Facebook</string>
    <string name="settings_links_facebook_url">http://www.facebook.com/alfrescosoftware</string>
    <string name="settings_favorite">Favorites</string>
    <string name="settings_favorite_sync">Enable Sync for \"%s\"</string>
    <string name="settings_favorite_sync_data">Data Usage</string>
    <string name="tasks_active">Active</string>
    <string name="tasks_completed">Completed</string>
    <string name="tasks_due">Due</string>
    <string name="tasks_due_today">Today</string>
    <string name="tasks_due_tomorrow">Tomorrow</string>
    <string name="tasks_due_week">Next 7 days</string>
    <string name="tasks_due_over">Overdue</string>
    <string name="tasks_due_no_date">No Date</string>
    <string name="tasks_priority">Priority</string>
    <string name="tasks_priority_low">Low</string>
    <string name="tasks_priority_medium">Medium</string>
    <string name="tasks_priority_high">High</string>
    <string name="tasks_assignee">Assignee</string>
    <string name="tasks_assignee_me">Me</string>
    <string name="tasks_assignee_unassigned">Unassigned</string>
</resources>