<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2005-2012 Alfresco Software Limited.
  
  This file is part of Alfresco Mobile for Android.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/wizard_main_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/account_authentication"
        style="@style/sectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_authentication"
        android:visibility="gone" />

    <TableLayout
        android:id="@+id/default_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/repository_username_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_username" />

            <EditText
                android:id="@+id/repository_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/required"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/repository_password_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_password" />

            <EditText
                android:id="@+id/repository_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/required"
                android:inputType="textPassword" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/repository_hostname_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_hostname" />

            <EditText
                android:id="@+id/repository_hostname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_hostname_hint"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_description" />

            <EditText
                android:id="@+id/repository_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_description_hint"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/repository_https_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/account_https" />

            <CheckBox
                android:id="@+id/repository_https"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="true" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/advanced"
        style="@style/sectionHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_advanced" />

    <TableLayout
        android:id="@+id/advanced_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_port" />

            <EditText
                android:id="@+id/repository_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/optional"
                android:inputType="number"
                >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_servicedocument" />

            <EditText
                android:id="@+id/repository_servicedocument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/optional"
                android:inputType="text"
                android:text="@string/account_service_document" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>