<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2005-2014 Alfresco Software Limited.
  
  This file is part of Alfresco Mobile for Android.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?AlfrescoTheme.Background.White"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/home_title"
            android:textSize="@dimen/home_title_size" />

        <Button
            style="?AlfrescoTheme.Button.Large"
            android:drawableLeft="@drawable/ic_cloud"
            android:onClick="cloud"
            android:text="@string/home_sign_cloud"
            android:contentDescription="@string/home_sign_cloud"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/home_sign_cloud_description"
            android:textSize="@dimen/home_description_size" />

        <Button
            style="?AlfrescoTheme.Button.Large"
            android:drawableLeft="@drawable/ic_login"
            android:onClick="launch"
            android:text="@string/home_account"
            android:contentDescription="@string/home_account"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_account_description"
            android:textSize="@dimen/home_description_size" />

        <TextView
            android:id="@+id/help_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/home_helper"
            android:textSize="@dimen/home_description_size" />
    </LinearLayout>

</ScrollView>